Hot fix for broken styles

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ nav {
 	margin-top: 57px;
 	height:78px;
 	font-family: 'Karla', sans-serif;
+	margin-bottom: 5%;
 }
 
 nav h1 {
@@ -101,7 +102,6 @@ nav a:hover {
 #about-jesse {
     padding-right: 250px;
     margin-bottom: 55px;
-		margin-top: 100px;
 }
 
 #projects a {
@@ -191,6 +191,9 @@ nav a:hover {
 
 	#about-jesse {
     margin-top: 50px;
+	}
+	nav {
+		margin-bottom: 0;
 	}
 }
 
